[project]
name = "rinchieeeee-recbole"
version = "0.1.0"
description = ""
authors = [
    {name = "rinchieeeee",email = "hayashi5151@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (==2.5.1)",
    "torchvision (==0.20.1)",
    "torchaudio (==2.5.1)",
    "marimo (>=0.11.22,<0.12.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "hyperopt (==0.2.5)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "texttable (>=1.7.0,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "thop (>=0.1.1.post2209072238,<0.2.0)",
    "tensorboard (>=2.5.0,<3.0.0)",
    "ray[tune] (>=2.43.0,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch_cu121"}
torchvision = {source = "torch_cu121"}
torchaudio = {source = "torch_cu121"}
